[package]
name = "wol-relay"
authors = ["Finomnis <finomnis@gmail.com>"]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/wol-relay"
description = "A Wake-on-LAN relay server."
keywords = ["wol", "wake-on-lan"]
categories = ["network-programming"]

exclude = ["/.gitignore", "/.github/", "/TODO.txt", "/Dockerfile"]

[features]
cli = ["dep:clap", "dep:clap-verbosity-flag", "dep:env_logger"]

[[bin]]
name = "wol-relay"
required-features = ["cli"]

[dependencies]
log = "0.4.27"
wol = "0.3.1"

[dependencies.env_logger]
optional = true
version = "0.11.8"

[dependencies.clap]
optional = true
version = "4.5.42"
default-features = false
features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "wrap_help",
]

[dependencies.clap-verbosity-flag]
optional = true
version = "3.0.3"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
